--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-    <title>KateLauren</title>
+    <title>KateLauren| About me</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -39,15 +39,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="#"
+                title="About Kate Lauren"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Kate Lauren"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -62,33 +71,36 @@
         the SheCodes Foundation to complete this SheCodes Workshop.
       </p>
     </div>
-    <div class="container projects">
+    <div class="container images">
       <div class="row pb-3">
         <div class="col-sm-4 pt-3">
           <img
             src="images/yogurt.jpg"
-            alt="yogurt"
+            alt="yogurt project"
             class="img-fluid border shadow image"
           />
         </div>
         <div class="col-sm-4 pt-3">
           <img
             src="images/book.jpg"
-            alt="book"
+            alt="book project"
             class="img-fluid border shadow image"
           />
         </div>
         <div class="col-sm-4 pt-3">
           <img
             src="images/weather.jpg"
-            alt="weather"
+            alt="weather project"
             class="img-fluid border shadow image"
           />
         </div>
       </div>
     </div>
     <h2 class="pt-5" id="contact">📮 Contact me</h2>
-    <a href="mailto:laurenkateryna@gmail.com" class="mail-link"
+    <a
+      href="mailto:laurenkateryna@gmail.com"
+      class="pb-4 mail-link"
+      title="email"
       >laurenkateryna@gmail.com</a
     >
   </body>
