--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="discription"
+      content="Successfully graduated from SheCodes Basics, SheCodes Plus and is
+      featured in the SheCodes Hall of Fame."
+    />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -19,7 +24,7 @@
     />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-    <title>KateLauren</title>
+    <title>KateLauren| Front-end developer from Kyiv, Ukraine</title>
   </head>
 
   <body>
@@ -40,19 +45,32 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="#"
+                title="Home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About Kate Lauren"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Kate Lauren"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
+    <h2>👋 Hi, I am</h2>
     <h1>Kate Lauren</h1>
     <h3>🇺🇦 Front-end developer, based in Europe</h3>
     <div class="links">
@@ -63,30 +81,32 @@
     </div>
     <div class="container projects">
       <div class="row pt-5">
-        <div class="col-md-6">
+        <div class="col-md-6 pe-4">
           <img
             src="images/yogurt.jpg"
-            alt="yogurt"
-            class="img-fluid border shadow"
+            alt="yogurt project"
+            class="img-fluid border shadow project-image"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ps-4 project-discription">
           <h2>Greek Yogurt</h2>
-          <p class="pt-4">
+          <p class="pt-4 project-info">
             Strained yogurt, Greek yogurt,[2] yogurt cheese, sack yogurt, or
             kerned yogurt is yogurt that has been strained to remove most of its
             whey, resulting in a thicker consistency than normal unstrained
             yogurt, while still preserving the distinctive sour taste of yogurt.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="project-link">Go to the page</a>
+            <a href="#" class="project-link" title="Greek Yogurt"
+              >Go to the page</a
+            >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-md-6 pe-4 project-discription">
           <h2>A Wild Sheep Chase</h2>
-          <p class="pt-4">
+          <p class="pt-4 project-info">
             A marvelous hybrid of mythology and mystery,
             <strong> A Wild Sheep Chase </strong>
             is the extraordinary literary thriller that launched Haruki
@@ -96,35 +116,39 @@
             company&lsquo;s advertisement.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="project-link">Go to the page</a>
+            <a href="#" class="project-link" title="A Wild Sheep Chase"
+              >Go to the page</a
+            >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ps-4">
           <img
             src="images/book.jpg"
-            alt="book"
-            class="img-fluid border shadow"
+            alt="book project"
+            class="img-fluid border shadow project-image"
           />
         </div>
       </div>
       <div class="row mt-5 pb-5">
-        <div class="col-md-6">
+        <div class="col-md-6 pe-4">
           <img
             src="images/weather.jpg"
-            alt="weather"
-            class="img-fluid border shadow"
+            alt="weather project"
+            class="img-fluid border shadow project-image"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ps-4 project-discription">
           <h2>Weather App</h2>
-          <p class="pt-4">
+          <p class="pt-4 project-info">
             Weather is the state of the atmosphere, describing for example the
             degree to which it is hot or cold, wet or dry, calm or stormy, clear
             or cloudy. When used without qualification, "weather" is generally
             understood to mean the weather of Earth.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="project-link">Go to the page</a>
+            <a href="#" class="project-link" title="Weather App"
+              >Go to the page</a
+            >
           </div>
         </div>
       </div>
