added media css

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
       <a href="about.html" class="text-center about-link">About me</a>
     </div>
     <div class="container projects">
-      <div class="row pt-5">
-        <div class="col-md-6 pe-4">
+      <div class="row pt-5 mb-5">
+        <div class="col-md-6 project-left">
           <img
             src="images/yogurt.jpg"
             alt="yogurt project"
-            class="img-fluid border shadow project-image"
+            class="img-fluid border shadow"
           />
         </div>
-        <div class="col-md-6 ps-4 project-discription">
+        <div class="col-md-6 project-right">
           <h2>Greek Yogurt</h2>
           <p class="pt-4 project-info">
             Strained yogurt, Greek yogurt,[2] yogurt cheese, sack yogurt, or
@@ -103,8 +103,9 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-md-6 pe-4 project-discription">
+      <hr />
+      <div class="row mt-5 mb-5">
+        <div class="col-md-6 project-left">
           <h2>A Wild Sheep Chase</h2>
           <p class="pt-4 project-info">
             A marvelous hybrid of mythology and mystery,
@@ -121,23 +122,24 @@
             >
           </div>
         </div>
-        <div class="col-md-6 ps-4">
+        <div class="col-md-6 project-right">
           <img
             src="images/book.jpg"
             alt="book project"
-            class="img-fluid border shadow project-image"
+            class="img-fluid border shadow"
           />
         </div>
       </div>
+      <hr />
       <div class="row mt-5 pb-5">
-        <div class="col-md-6 pe-4">
+        <div class="col-md-6 project-left">
           <img
             src="images/weather.jpg"
             alt="weather project"
-            class="img-fluid border shadow project-image"
+            class="img-fluid border shadow"
           />
         </div>
-        <div class="col-md-6 ps-4 project-discription">
+        <div class="col-md-6 project-right">
           <h2>Weather App</h2>
           <p class="pt-4 project-info">
             Weather is the state of the atmosphere, describing for example the
